Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,14 @@
 <%# Write your code here! %>
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Sinatra Views Lab II</title>
+  </head>
+  <body>
+    <h1><%= "Welcome!" %></h1>
+    
+  </body>
+</html>
+
