Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
     <title>Sinatra Views Lab II</title>
   </head>
   <body>
-    <h1><%= "Welcome!" %></h1>
+    <h1>Welcome!</h1>
     
   </body>
 </html>
