--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,9 @@
   <body>
     <h1>Welcome!</h1>
     <h2>If you tell me your name, I can say hi!</h2>
+    <form>
+      <input>
+    </form>
   </body>
 </html>
 
