--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,7 @@
     <h2>If you tell me your name, I can say hi!</h2>
     <form>
       <input id="name" type="text" name="name" placeholder="Enter Name" required>
+      <input type="submit" value="submit"
     </form>
   </body>
 </html>
