--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
     <h1>Welcome!</h1>
     <h2>If you tell me your name, I can say hi!</h2>
     <form>
-      <input id="name" type="text" name="name" placeholder="Enter Name" required>
+      <input id="name" type="text" name="username" placeholder="Enter Name" required>
       <input type="submit" value="Submit">
     </form>
   </body>
