--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
   <body>
     <h1>Welcome!</h1>
     <h2>If you tell me your name, I can say hi!</h2>
-    <form method="POST">
+    <form action="/greet" method="POST">
       <input id="user_name" type="text" name="name" placeholder="Enter Name" required>
       <input type="submit" value="Submit">
     </form>
