--- a/views/index.erb
+++ b/views/index.erb
@@ -1,17 +1,17 @@
 <%# Write your code here! %>
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Sinatra Views Lab II</title>
-  </head>
-  <body>
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <title>Sinatra Views Lab II</title>-->
+<!--  </head>-->
+<!--  <body>-->
     <h1>Welcome!</h1>
     <h2>If you tell me your name, I can say hi!</h2>
     <form action="/greet" method="POST">
       <input id="user_name" type="text" name="name" placeholder="Enter Name" required>
       <input type="submit" value="Submit">
     </form>
-  </body>
-</html>
+<!--  </body>-->
+<!--</html>-->
 
