--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,19 @@
 
 <h1>Welcome!</h1>
 <h2>If you tell me your name, I can say hi!</h2>
+
 <form action="/greet" method="POST">
   <input id="user_name" type="text" name="name" placeholder="Enter Name" required>
   <input type="submit" value="Submit">
 </form>
+
+
+<!--<h1>Welcome!</h1>-->
+ 
+<!--<form action="/greet" method="POST">-->
+<!--  <label for="user_name">Name:</label>-->
+ 
+<!--  <p><input type="text" name="user_name" id="user_name" /></p>-->
+ 
+<!--  <input type="submit" value="Submit"/>-->
+<!--</form>-->
