Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 <h2>If you tell me your name, I can say hi!</h2>
 
 <form action="/greet" method="POST">
-  <input id="user_name" type="text" name="name" placeholder="Enter Name" required>
+  <input id="user_name" type="text" name="user_name" placeholder="Enter Name" required>
   <input type="submit" value="Submit">
 </form>
 
